# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md
RTinOW/: Camera.hpp  Hittable.hpp  Hittablelist.hpp  Material.h  color.h  image1.ppm  image2.ppm  ray.h  ray_trace.cl  rednerer.ppm  rednerer1.ppm  shpere.h  vec3.h
app/: main.cpp
images/: rednerer3.ppm
kernels/: ray_tracer_text.cl
scripts/: build.sh  run.sh
src/: Camera.hpp  Material.hpp  Objects.hpp  Utils.hpp  pchray.h
src/compute/: Backend.cpp  Backend.hpp
src/compute/OpenCL/: CLBackend.cpp  CLBackend.hpp  CLUtils.hpp
src/compute/SceneGPU/: DTOs.hpp  Serialize.hpp
